[edit] fixing scss

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -10,6 +10,7 @@
 
     background: url('../../../public/snowboard.jpg') 50% 50% no-repeat;
     background-size: cover;
+    background-color: blue;
 
     z-index: -1;
 }
