--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,13 +1,54 @@
-.header {
-    width: 100%;
-    display:flex;
-    min-height: 100vh;
-    align-items: center;
+@import '../../../global/global.scss';
+
+/*
+body {
+    display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    max-width:100%;
+    max-height:100%;
+    height: auto;
+    width:auto;
     justify-content: center;
-    flex-direction: column;
-
-    background: url('../../../public/snowboard.jpg') 50% 50% no-repeat;
-    background-size: cover;
-
-    z-index: -1;
 }
+*/
+
+.wrapper {
+    display: flex;
+    //verical alignment
+    align-items: center;
+    background-image: url('../../../public/snowboard.jpg');
+    height: 40vh;
+    //horizontal alignment
+    justify-content: center;
+    font-size: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    padding: 20px;
+}
+
+.wrapper-child {
+    display: flex;
+    font-size: 50px;
+}
+
+/*
+this styling is for changing text for hover
+
+.wrapper:hover {
+    font-size: 0;
+}
+
+.wrapper:hover:after {
+    content: attr(data-hover);
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 200px;
+    text-align: center;
+}
+
+*/
