--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -1,28 +1,9 @@
+@import '../../../global/global.scss';
+@import url(http://fonts.googleapis.com/css?family=Raleway);
 .aboutMe {
     display: flex;
     flex-direction: column;
-    padding: 15px;
-    background-color: rgb(0, 153, 255);
-    font-family: Raleway, sans-serif;
-}
-
-.aboutMe-Header {
-    background-color: #f8f8f8;
-    border: 1px solid #c8c8c8;
-    border-radius: 5px;
-    width: 110px;
-    text-align: center;
-    padding: 20px;
-    position: absolute;
-}
-
-.aboutMe-Header .arrow {
-    border-style: solid;
-    position: absolute;
-}
- 
-.bottom {
-    border-color: #c8c8c8 transparent transparent transparent;
-    border-width: 8px 8px 0px 8px;
-    bottom: -8px;
+    padding: 21px;
+    background-color: rgb(111, 111, 185);
+    color: white;
 }
