--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -69,6 +69,7 @@
       img {
         height: 450px;
         // -webkit-filter: grayscale(100%);
+        //fix
         width: 100%;
       }
       
