[edit] fixing about component and moving onto technical

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -11,13 +11,47 @@
 
 .aboutMePicture {
 
+    position: relative;
+    transition: 0.5s;
+
     img {
         border-radius: 50%;
         width: 375px;
         padding: 15px;
         margin-left: 50px;
         margin-top: 68px;
+        //you can delete this to revert
+        position: absolute;
+        transition: 0.5s;
     }
+}
+//you can delete this to revert
+.aboutMePicture:hover img:nth-child(4) {
+    transform: translate(40px, -40px);
+    opacity: 1;
+}
+
+.aboutMePicture:hover img:nth-child(3) {
+    transform: translate(30px, -30px);
+    opacity: .8;
+}
+
+.aboutMePicture:hover img:nth-child(2) {
+    transform: translate(20px, -20px);
+    opacity: .6;
+}
+
+.aboutMePicture:hover img:nth-child(1) {
+    transform: translate(10px, -10px);
+    opacity: .4;
+}
+
+.aboutMe-Header {
+    margin-left: 400px;
+}
+
+.aboutMe-paragraph {
+    margin-left: 400px;
 }
 
 .about-me-description {
@@ -25,6 +59,7 @@
 
     em {
         font-size: 30px;
+        text-decoration: underline;
     }
 }
 
