[add] working on skills component

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -63,6 +63,13 @@
     }
 }
 
+.about-me {
+    h1 {
+        letter-spacing: .1em;
+        line-height: 1em;
+    }
+}
+
 .headerAndParagraph {
     display: flex;
     flex-direction: column;
