--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -4,6 +4,7 @@
     display: flex;
     font-family: sans-serif;
     justify-content: center;
+    background-color: #eaeaea;
 }
 
 .containerForSkills {
