--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,25 +1,88 @@
 @import '../../../global/global.scss';
 
-/*
-body {
-    display: flex;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    max-width:100%;
-    max-height:100%;
-    height: auto;
-    width:auto;
-    justify-content: center;
-}
-*/
+@keyframes slider  {
+    0% {
+        left: 0;
+        opacity: .6;
+    }
 
+    20% {
+        left: 0;
+        opacity: .6;
+    }
+
+    25% {
+        left: -100%;
+        opacity: .6;
+    }
+
+    45% {
+        left: -100%;
+        opacity: .6;
+    }
+
+    50% {
+        left: -200%;
+        opacity: .6;
+    }
+
+    70% {
+        left: -200%;
+        opacity: .6;
+    }
+
+    75% {
+        left: -300%;
+        opacity: .6;
+    }
+
+    95% {
+        left: -300%;
+        opacity: .6;
+    }
+
+    100% {
+        left: -400%;
+        opacity: .6;
+    }
+}
+
+.slider {
+    overflow: hidden;
+    max-width: 100%;
+
+    .wrapper {
+        font-size: 50px;
+        text-align: center;
+
+        .wrapper-child {
+            position: relative;
+            top: -8em;
+        }
+    }
+}
+
+.slider figure img {
+    width: 20%;
+    float: left;
+    height: 100vh;
+}
+
+.slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    text-align: left;
+    font-size: 0;
+    animation: 20s slider infinite;
+}
+/*
 .wrapper {
     display: flex;
     //verical alignment
     align-items: center;
-    background-image: url('../../../public/snowboard.jpg');
+    background-image: url('../../../public/background1.jpg');
     background-attachment: fixed;
     height: 100vh;
     //horizontal alignment
@@ -28,7 +91,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color: black;
     padding: 20px;
 
     .wrapper-child {
@@ -36,7 +99,7 @@ body {
         font-size: 90px;
     }
 }
-
+*/
 /*
 this styling is for changing text for hover
 
