[edit] fixing fonts and position

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -6,7 +6,8 @@
     padding: 21px;
     background-color: rgb(111, 111, 185);
     color: white;
-    font-family: sans-serif;
+    font-family: 'Montserrat';
+    font-weight: bold;
 }
 
 .aboutMePicture {
