--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -57,7 +57,10 @@
 
         .wrapper-child {
             position: relative;
-            top: -8em;
+            top: -6em;
+            font-size: 78px;
+            font-family: 'Montserrat';
+            font-weight: 1000;
         }
     }
 }
