--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -5,6 +5,8 @@
     font-family: sans-serif;
     justify-content: center;
     background-color: #eaeaea;
+    font-weight: bold;
+    font-family: 'Montserrat';
 }
 
 .containerForSkills {
