--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     padding: 21px;
-    background-color: rgb(111, 111, 185);
+    background-color: #D5D5D5;
     color: white;
     font-family: 'Montserrat';
     font-weight: bold;
@@ -53,6 +53,7 @@
 
 .aboutMe-paragraph {
     margin-left: 400px;
+    color: #062F4F;
 }
 
 .about-me-description {
@@ -80,7 +81,7 @@
     h1 {
         font-size: 22px;
         position: relative;
-        background: #3db2e1;
+        background: #9099a2;
         border-radius: .4em;
         text-align: center;
         box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
@@ -96,7 +97,7 @@
         width: 0;
         height: 0;
         border: 20px solid transparent;
-        border-right-color: #3db2e1;
+        border-right-color: #9099a2;
         border-left: 0;
         border-bottom: 0;
         margin-top: -10px;
