--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -16,6 +16,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  color: white;
 }
 #cssmenu:after,
 #cssmenu > ul:after {
@@ -31,11 +32,12 @@
 }
 #cssmenu {
   width: auto;
-  font-family: Raleway, sans-serif;
+  font-family: 'Montserrat';
   line-height: 1;
+  font-weight: bold;
 }
 #cssmenu > ul {
-  background: #3db2e1;
+  background: #9099a2;
 }
 #cssmenu > ul > li {
   float: left;
@@ -61,7 +63,7 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
-  background: #3db2e1;
+  background: #9099a2;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   -o-transition: all .3s;
@@ -74,11 +76,11 @@
   transform-style: preserve-3d;
 }
 #cssmenu > ul > li.active > a {
-  color: #dff2fa;
+  color: white;
 }
 #cssmenu > ul > li:hover > a,
 #cssmenu > ul > li > a:hover {
-  color: #dff2fa;
+  color: white;
   -webkit-transform: rotateX(90deg) translateY(-23px);
   -moz-transform: rotateX(90deg) translateY(-23px);
   transform: rotateX(90deg) translateY(-23px);
@@ -96,7 +98,7 @@
   height: 100%;
   padding: 16px 20px;
   color: #dff2fa;
-  background: #19799f;
+  background: #9099a2;
   content: attr(data-title);
   -webkit-transition: background 0.3s;
   -moz-transition: background 0.3s;
@@ -107,12 +109,14 @@
   -webkit-transform-origin: 50% 0;
   -moz-transform-origin: 50% 0;
   transform-origin: 50% 0;
-  -ms-transform: translateY(- -18px);
+  -ms-transform: translateY(-18px);
 }
 #cssmenu > ul > li:hover > a::before,
 #cssmenu > ul > li > a:hover::before {
-  background: #3db2e1;
+  background: #9099a2;
+  color: white;
 }
+
 #cssmenu.small-screen {
   width: 100%;
 }
@@ -147,7 +151,7 @@
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: #3db2e1;
+  background: #9099a2;
 }
 #cssmenu.small-screen #menu-button:after {
   content: "";
