[edit] editing nav bar color scheme

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -59,10 +59,10 @@
             position: relative;
             top: -6em;
             font-size: 78px;
-            font-family: 'Montserrat';
-            font-weight: 1000;
-            text-shadow: 2px 0 black;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 700;
             letter-spacing:2px;
+            color: #e44f59
         }
     }
 }
