--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -2,9 +2,8 @@
 
 .container
 {
-  font-family: Raleway;
   margin: 0 auto;
-	padding: 2em;
+  padding: 2em;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -19,7 +18,7 @@
 
 .container a
 {
-    color: #FFF;
+    color: #282828;
     text-decoration: none;
     font: 20px Raleway;
     margin: 0px 10px;
@@ -27,10 +26,11 @@
     position: relative;
     z-index: 0;
     cursor: pointer;
+    font-weight: bold;
 }
 .red
 {
-    background: #e24e42;
+    background: #fff;
     opacity: .9;
 }
 
@@ -41,11 +41,11 @@
     left: 0px;
     width: 100%;
     height: 2px;
-    background: #FFF;
+    background: black;
     content: "";
     opacity: 0;
     transition: all 0.3s;
-        display: flex;
+    display: flex;
     flex-direction: column;
 }
 
@@ -65,4 +65,5 @@
 {
     opacity: 1;
     transform: translateY(0px);
+    background: #e44f59;
 }
