--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -62,7 +62,7 @@
             font-family: 'Roboto', sans-serif;
             font-weight: 700;
             letter-spacing:2px;
-            color: #e44f59
+            color: #ff2a2a
         }
     }
 }
