--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -51,28 +51,6 @@
     margin-top: -11px;
 }
 
-/*
-//you can delete this to revert
-.aboutMePicture:hover img:nth-child(4) {
-    transform: translate(40px, -40px);
-    opacity: 1;
-}
-
-.aboutMePicture:hover img:nth-child(3) {
-    transform: translate(30px, -30px);
-    opacity: .8;
-}
-
-.aboutMePicture:hover img:nth-child(2) {
-    transform: translate(20px, -20px);
-    opacity: .6;
-}
-
-.aboutMePicture:hover img:nth-child(1) {
-    transform: translate(10px, -10px);
-    opacity: .4;
-}*/
-
 .aboutMe-Header {
     margin-left: 400px;
 }
@@ -94,6 +72,7 @@
 }
 
 .about-me-description {
+    display: flex;
     line-height: 2.0em;
 
     em {
@@ -113,6 +92,13 @@
     }
 }
 
+.polaroid-parent {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    margin-right: 86px;
+    margin-left: 139px;
+}
+
 .polaroid {
     position: relative;
     width: 220px;
@@ -125,6 +111,7 @@
     -moz-box-shadow: 3px 3px 3px #777;
     box-shadow: 3px 3px 3px #777;
     height: 400px;
+    margin-top: 5px;
   }
    
   .polaroid p {
@@ -141,13 +128,14 @@
   .about-content {
       display: flex;
       flex-direction: column;
-      background-color: #6f6fb9;
-      color: white;
+      background-color: #F7F7F7;
+      color: black;
       line-height: 1.8em;
       font-family: 'Montserrat';
       font-weight: bold;
       padding-left: 20px;
       padding-right: 20px;
+      margin-top: 36px;
 
       ol {
         list-style-type: decimal;
@@ -164,12 +152,13 @@
       }
 
       h1 {
-          font-size: 42px;
+          font-size: 50px;
           display: flex;
           justify-content: center;
           margin-top: 16px;
-          text-decoration: underline;
           padding-bottom: 7px;
           padding-top: 12px;
+          color: #2c3e50;
+          font-family: 'Roboto', sans-serif;
       }
   }
