--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -2,11 +2,11 @@
 
 .skills {
     display: flex;
-    font-family: sans-serif;
+    font-family: 'Montserrat';
     justify-content: center;
     background-color: #eaeaea;
     font-weight: bold;
-    font-family: 'Montserrat';
+    font-size: 19px;
 }
 
 .containerForSkills {
@@ -25,6 +25,9 @@
         line-height: 1em;
         padding-bottom: 22.5px;
         padding-top: 12px;
-        text-decoration: underline;
+        color: #2c3e50;
+        font-size: 50px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
     }
 }
