[fix] fixing margins for about component

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -74,6 +74,9 @@
 .about-me-description {
     display: flex;
     line-height: 2.0em;
+    text-align: justify;
+    margin-left: 122px;
+    margin-right: 111px;
 
     em {
         font-size: 30px;
