--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -2,6 +2,7 @@
 
 .aboutMe {
     display: flex;
+    width: 100%;
     flex-direction: column;
     padding: 21px;
     color: white;
@@ -122,7 +123,8 @@
     text-align: center;
     width: 100%;
     bottom: 0px;
-    font: 400 18px/1 'Kaushan Script', cursive;
+    font-family: Courier New;
+    text-transform: uppercase;
     color: #888;
     padding-bottom: 15px;
     margin-left: 72px;
