--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -61,8 +61,8 @@
             font-size: 78px;
             font-family: 'Roboto', sans-serif;
             font-weight: 700;
-            letter-spacing:2px;
-            color: #ff2a2a
+            letter-spacing: .2em;
+            color: #ad2525;
         }
     }
 }
