[edit] changing Header component h1 to Stronger font

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -18,7 +18,7 @@
         color: #2c3e50;
         margin-bottom: 44px;
         font-size: 50px;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Stronger', sans-serif;
         font-weight: 700;
         padding-top: 40px;
     }
