[edit] fixing header font to stronger

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -57,12 +57,10 @@
 
         .wrapper-child {
             position: relative;
-            top: -6em;
-            font-size: 78px;
-            font-family: 'Roboto', sans-serif;
-            font-weight: 700;
-            letter-spacing: .2em;
-            color: #ad2525;
+            top: -2.7em;
+            font-size: 185px;
+            font-family: 'Stronger', sans-serif;
+            color: #383131;
         }
     }
 }
