--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -31,3 +31,14 @@
         justify-content: center;
     }
 }
+
+.col-md-6 {
+    padding-top: 2em;
+}
+
+.moreSkills {
+    
+    h1 {
+        text-align: center;
+    }
+}
