[edit] need to make skills index better

--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -37,8 +37,12 @@
 }
 
 .moreSkills {
-    
+
     h1 {
         text-align: center;
     }
+}
+
+.react-sweet-progress-symbol {
+    padding-right: 2em;
 }
