--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -167,3 +167,14 @@
           font-family: 'Roboto', sans-serif;
       }
   }
+
+@media only screen and (max-width: 400px) {
+
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+}
+
+@media only screen and (min-width: 961px) {
+
+}
