--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -81,3 +81,30 @@
     animation: 15s slider infinite;
     filter: blur(2px);
 }
+
+@media only screen and (max-width: 400px) {
+    .slider {
+
+        .wrapper {
+
+            .wrapper-child {
+                font-size: 3em;
+                top: -2.8em;
+                margin-left: 17px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+    .slider {
+
+        .wrapper {
+
+            .wrapper-child {
+                margin-left: 17px;
+                top: -2.8em;
+            }
+        }
+    }
+}
