--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -71,3 +71,15 @@
     transform: translateY(0px);
     background: #ad2525;
 }
+
+@media only screen and (max-width: 400px) {
+
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+
+}
+
+@media only screen and (min-width: 961px) {
+
+}
