--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -82,29 +82,43 @@
     filter: blur(2px);
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 425px) {
     .slider {
 
         .wrapper {
 
             .wrapper-child {
                 font-size: 3em;
-                top: -2.8em;
+                top: -2.9em;
                 margin-left: 17px;
             }
         }
     }
 }
 
-@media only screen and (min-width: 401px) and (max-width: 960px) {
+@media only screen and (min-width: 426px) and (max-width: 960px) {
     .slider {
 
         .wrapper {
 
             .wrapper-child {
                 margin-left: 17px;
-                top: -2.8em;
+                top: -2.3em;
             }
         }
     }
+}
+
+@media only screen and (min-width: 961px) {
+    .slider {
+
+        .wrapper {
+
+            .wrapper-child {
+                margin-left: 17px;
+                top: -2.9em;
+                font-size: 5em;
+            }
+        }
+    }   
 }
