--- a/client/global/global.scss
+++ b/client/global/global.scss
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
+	width: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
