--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -198,14 +198,17 @@
     }
 
 .aboutMe-paragraph {
+    display: flex;
+    flex-direction: column;
 
     h1 {
         margin-bottom: 0.2em;
+        font-size: 1.6em;
     }
 
     p {
         margin-bottom: 1em;
-        line-height: 1.3em;
+        line-height: 1.7em;
     }
 }
 
@@ -215,15 +218,53 @@
     ul {
         list-style-type: none;
         color: black;
-        line-height: 1.3em;
+        line-height: 1.7em;
         margin-bottom: 1em;
         text-align: center;
         padding-top: .6em;
     }
 }
 
+.polaroid-parent {
+    display: flex;
+    flex-direction: column;
+
+    .polaroid {
+        
+        p {
+            text-align: center;
+            margin-bottom: .7em;
+            margin-top: 1.2em;
+        }
+    }
 }
-  
+
+.about-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me {
+    display: flex;
+
+    h1 {
+        justify-content: center;
+        font-size: 2em;
+        margin-top: .8em;
+        margin-bottom: .3em;
+    }
+}
+
+.about-me-description {
+
+    ol {
+        line-height: 1.7em;
+    }
+}
+
+}
+
+//tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {
 }
 
