--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -87,7 +87,8 @@
     .slider {
 
         .wrapper {
-
+            height: 0;
+            
             .wrapper-child {
                 font-size: 3em;
                 top: -2.9em;
