--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -73,7 +73,20 @@
 }
 
 @media only screen and (max-width: 400px) {
-
+    .container {
+        padding: .8em;
+    }
+    
+    .container a {
+        font-size: .9em;
+    }
+    
+    .container {
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
 }
 
 @media only screen and (min-width: 401px) and (max-width: 960px) {
