--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -8,6 +8,13 @@
     font-size: 19px;
 }
 
+.skill-title {
+    h3 {
+        text-align: center;
+        padding: 1em;
+    }
+}
+
 .containerForSkills {
     flex-direction: column;
 
@@ -32,10 +39,6 @@
     }
 }
 
-.col-md-6 {
-    padding-top: 2em;
-}
-
 .moreSkills {
 
     h1 {
@@ -45,4 +48,14 @@
 
 .react-sweet-progress-symbol {
     padding-right: 2em;
+
+}
+
+.progress-circle {
+    height: 8em;
+    text-align: center;
+
+    .react-sweet-progress-symbol-absolute {
+        padding-left: 1.5em;
+    }
 }
