[fix] fixing portfolio component to be mobile friendly

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -218,8 +218,7 @@
     }
 }
   
-
-
+//phones
 @media only screen and (max-width: 425px) {
     .aboutMe {
         flex-direction: column;
@@ -271,6 +270,7 @@
         }
     }
 }
+
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {  
     .aboutMe {
