--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -76,6 +76,7 @@
 @media only screen and (max-width: 425px) {
     .container {
         padding: .8em;
+        position: static;
     }
     
     .container a {
@@ -91,7 +92,13 @@
 }
 
 //tablets
-@media only screen and (min-width: 426px) and (max-width: 960px) {
+@media only screen and (min-width: 426px) and (max-width: 568px) {
+    .container a {
+        font-size: 13px;
+    }
+}
+
+@media only screen and (min-width: 569px) and (max-width: 960px) {
 
 }
 
