[edit] desktop responsive almost done

--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -59,3 +59,10 @@
         padding-left: 1.5em;
     }
 }
+
+@media only screen and (min-width: 961px) {
+    .skills {
+        padding-left: 9em;
+        padding-right: 9em;
+    }
+}
