--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -320,7 +320,7 @@
         -moz-box-shadow: 3px 3px 3px #777;
         box-shadow: 3px 3px 3px #777;
         margin-top: 5px;
-      }
+        }
        
       .polaroid p {
         position: absolute;
@@ -339,5 +339,81 @@
 }
 
 @media only screen and (min-width: 961px) {
+    .aboutMe {
+        flex-direction: column;
+        padding-left: 9em;
+        padding-right: 9em;
+
+        .aboutMe-header {
+
+            h1 {
+                font-size: 69px;
+            }
+        }
+    }
     
+    .containerForPicDescription {
+        display: flex;
+        flex-direction: column;
+        padding-top: 1em;
+
+    }
+
+    .about-container {
+        display: flex;
+        margin-top: 2%;
+        
+        .aboutMe-paragraph {
+            flex-direction: column;
+            font-size: 1.2em;
+            flex: 3;
+        }
+    }
+
+    .containerAbout {
+        margin-left: 2%;
+        flex: 1;
+    }
+
+    .polaroid-parent {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        justify-content: center;
+    }
+    
+    .polaroid {
+        position: relative;
+        padding: 2%;
+      }
+       
+      .polaroid img {
+        border: 10px solid #fff;
+        border-bottom: 45px solid #fff;
+        -webkit-box-shadow: 3px 3px 3px #777;
+        -moz-box-shadow: 3px 3px 3px #777;
+        box-shadow: 3px 3px 3px #777;
+        margin-top: 5px;
+      }
+       
+      .polaroid p {
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        bottom: 0px;
+        font-family: Courier New;
+        text-transform: uppercase;
+        color: #888;
+        padding-bottom: 15px;
+      }
+    
+    .about-me {
+        h1 {
+            margin-top: .3em;
+            margin-bottom: .3em;
+        }
+    }
+
+    .about-me-description {
+        line-height: 2.3em;
+    }
 }
