--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -99,7 +99,9 @@
 }
 
 @media only screen and (min-width: 569px) and (max-width: 960px) {
-
+    .container {
+        position: relative;
+    }
 }
 
 @media only screen and (min-width: 961px) {
