--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -98,5 +98,9 @@
 
 //desktops
 @media only screen and (min-width: 961px) {
-    
+    .portfolio-grid {
+        flex-direction: column;
+        padding-left: 9em;
+        padding-right: 9em;
+    }
 }
