--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -237,14 +237,31 @@
     .polaroid-parent {
         display: flex;
         flex-direction: column;
+        justify-content: center;
 
         .polaroid {
-            
-            p {
-                text-align: center;
-                margin-bottom: .7em;
-                margin-top: 1.2em;
-            }
+            position: relative;
+            margin: 1%;
+        }
+
+        .polaroid img {
+            border: 10px solid #fff;
+            border-bottom: 45px solid #fff;
+            -webkit-box-shadow: 3px 3px 3px #777;
+            -moz-box-shadow: 3px 3px 3px #777;
+            box-shadow: 3px 3px 3px #777;
+            margin-top: 5px;
+        }
+
+        .polaroid p {
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            bottom: 0px;
+            font-family: Courier New;
+            text-transform: uppercase;
+            color: #888;
+            padding-bottom: 15px;
         }
     }
 
