[edit] fixing navigation bar

--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -81,12 +81,17 @@
     
     .container a {
         font-size: 1.2em;
+        padding: 3px;
     }
     
     .container {
         ul {
             display: flex;
             flex-wrap: wrap;
+
+            li {
+                padding: 3px;
+            }
         }
     }
 }
