--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -35,6 +35,18 @@
     z-index: 2;
     transition: all .5s ease;
 
+    h4 {
+        font-size: 30px;
+        padding: 8px;
+        margin: 30px;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        
+        border-bottom: .75px solid white;
+        
+        transition: margin-bottom .3s ease-in;
+      }
+
     a {
         border: .5px solid white;
         transition: margin-bottom .3s ease-in;
