--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -1,84 +1,27 @@
 @import '../../../global/global.scss';
 
 .portfolio {
-    h1 {
-        font-size: 48px;
-        text-transform: uppercase;
-        letter-spacing: .07em;
-        line-height: 1em;
-        padding-bottom: 22.5px;
-        padding-top: 12px;
-        color: #2c3e50;
-        font-size: 50px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: bold;
-        display: flex;
-        justify-content: center;
-        margin-top: .1em;
-        margin: auto;
-        position: relative;
-    }
-}
-
-.portfolio-grid {
-    display: flex;
-    justify-content: center;
-}
-
-.project-hover {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 2;
-    transition: all .5s ease;
-
-    h4 {
-        font-size: 30px;
-        padding: 8px;
-        margin: 30px;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
-        
-        border-bottom: .75px solid white;
-        
-        transition: margin-bottom .3s ease-in;
-      }
-
-    a {
-        border: .5px solid white;
-        transition: margin-bottom .3s ease-in;
-        text-transform: uppercase;
-        text-decoration: none;
-        text-align: center;
-    }
-
-    .portfolio-grid-item:hover .project-hover {
-        visibility: visible;
-        opacity: 1;
-        
-        height: 100%;
-        width: 100%;
-        
-        background: linear-gradient(
-          rgba(0, 0, 0, 0.8),
-          rgba(0, 0, 0, 0.8)
-          );
-          
-          a:hover {
-            background: white;
-            color: black;
-          }
-          
-          .current {
-            margin: 5px;
-          }
-          
-          transition: margin-bottom .3s ease-in;
+    background-color: #f7f7f7;
+    
+    .portfolio-header {
+        h1 {
+            font-size: 48px;
+            text-transform: uppercase;
+            letter-spacing: .07em;
+            line-height: 1em;
+            padding-bottom: 22.5px;
+            padding-top: 12px;
+            color: #2c3e50;
+            font-size: 50px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            margin-top: .1em;
+            margin: auto;
+            position: relative;
         }
-      
+    }
 }
 
 //phones
@@ -104,15 +47,142 @@
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {
     .portfolio-grid {
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        padding-left: 7em;
+        padding-right: 7em;
+
+        .portfolio-grid-item {
+            text-align: center;
+
+            img {
+                height: 15em;
+                width: auto;
+            }
+        }
     }
 }
 
 //desktops
 @media only screen and (min-width: 961px) {
-    .portfolio-grid {
-        flex-direction: column;
-        padding-left: 9em;
-        padding-right: 9em;
+    .view {
+        margin: 10px;
+        float: left;
+        border: 10px solid #fff;
+        overflow: hidden;
+        position: relative;
+        text-align: center;
+        box-shadow: 1px 1px 2px #e6e6e6;
+        cursor: default;
+        width: auto;
+      }
+
+    .view .mask,
+    .view .content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     }
+
+    .view img {
+    display: block;
+    position: relative;
+    height: 20em;
+    width: auto;
+    }
+
+    .view h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    font-family: Raleway, serif;
+    padding: 10px;
+    /*background: rgba(0, 0, 0, 0.8);*/
+    margin: 20px 0 0 0
+    }
+
+    .view p {
+    font-family: Merriweather, serif;
+    font-style: italic;
+    font-size: 14px;
+    position: relative;
+    color: #fff;
+    padding: 0px 20px 0px;
+    text-align: center
+    }
+
+    .view a.info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #000;
+    color: #fff;
+    font-family: Raleway, serif;
+    text-transform: uppercase;
+    box-shadow: 0 0 1px #000
+    }
+
+    .view a.info:hover {
+    box-shadow: 0 0 5px #000
+    }
+
+        .view-tenth img {
+            transform: scaleY(1);
+            transition: all .7s ease-in-out;
+        }
+        
+        .view-tenth .mask {
+            background-color:black;
+            transition: all 0.5s linear;
+            opacity: 0;
+        }
+        
+        .view-tenth h2 {
+            border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+            background: transparent;
+            margin: 20px 40px 0px 40px;
+            transform: scale(0);
+            color: #fff;
+            transition: all 0.5s linear;
+            opacity: 0;
+        }
+        
+        .view-tenth p {
+            color: #fff;
+            opacity: 0;
+            transform: scale(0);
+            transition: all 0.5s linear;
+        }
+        
+        .view-tenth a.info {
+            opacity: 0;
+            transform: scale(0);
+            transition: all 0.5s linear;
+        }
+        
+        .view-tenth:hover img {
+            -webkit-transform: scale(10);
+            transform: scale(10);
+            opacity: 0;
+        }
+        
+        .view-tenth:hover .mask {
+            opacity: .8;
+        }
+        
+        .view-tenth:hover h2,
+        .view-tenth:hover p,
+        .view-tenth:hover a.info {
+            transform: scale(1);
+            opacity: 1;
+        }
 }
