--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -65,6 +65,11 @@
 
 //desktops
 @media only screen and (min-width: 961px) {
+    .portfolio {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+    }
+
     .view {
         margin: 10px;
         float: left;
@@ -74,7 +79,7 @@
         text-align: center;
         box-shadow: 1px 1px 2px #e6e6e6;
         cursor: default;
-        width: auto;
+        width: 21em;
       }
 
     .view .mask,
