--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -64,6 +64,13 @@
     margin: 0;
 }
 
+.more-skills-header {
+    h1 {
+        font-size: 1.6em;
+        text-align: center;
+    }
+}
+
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {
     col-md-6 {
@@ -81,7 +88,7 @@
 
     .moreSkills-columns {
         h1 {
-            font-size: 1em;
+            font-size: 1.6em;
         }
     }
 }
