--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -164,7 +164,7 @@
 
     .polaroid-parent {
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 33% 33% 33%;
         justify-content: center;
     }
     
