--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -164,7 +164,7 @@
 
     .polaroid-parent {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 25% 25% 25% 25%;
         justify-content: center;
     }
     
@@ -243,7 +243,7 @@
 
     .polaroid-parent {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 25% 25% 25% 25%;
         justify-content: center;
     }
     
